--- a/src/pages/CAMIstry.css
+++ b/src/pages/CAMIstry.css
@@ -28,6 +28,7 @@
     flex-direction: column;
     align-items: center;
   }
+  
   .item .icon {
     width: 85px;
     height: 85px;
@@ -46,7 +47,7 @@
     height: 1%;
   }
   
-  /* تحديد مواقع العناصر حول الدائرة */
+  /* مواقع العناصر حول الدائرة */
   .information {
     top: 22%;
     left: -5%;
@@ -76,10 +77,10 @@
   
   .conclusion {
     bottom: 10%;
-    left:-5%;
+    left: -5%;
   }
   
-  /* تحديد مواقع الأسهم وتدويرها */
+  /* مواقع الأسهم وتدويرها */
   .information-arrow {
     top: 12%;
     left: 16%;
@@ -105,8 +106,15 @@
   }
   
   .steps-arrow {
-    bottom:-4%;
+    bottom: -4%;
     left: 24%;
     transform: rotate(-125deg);
   }
   
+  /* السهم على الشمال */
+  .left-arrow {
+    top: 20px;
+    left: -250px;
+  
+    position: absolute;
+  }
