--- a/src/pages/Tools.css
+++ b/src/pages/Tools.css
@@ -166,7 +166,8 @@
     border: 1px solid #ccc;
     border-radius: 6px;
     padding: 5px;
-    background-color: #fff;
+    background-color: #a3a3a3;
   }
   
+
   
